src/index.css
@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');

main {
    display: flex;
    flex-direction: column;
    text-align: center;
    font-family: 'Lato', sans-serif;
}

#info-area {
    background-color: gainsboro;
    width: 50%;
    margin: 0 auto 20px;
    border: 1px solid darkgrey;
    border-radius: 2px;
}

#grid-area {
    display: flex;
    justify-content: space-evenly;
}

.board-n-ships {
    display: grid;
}

.game-board {
    position: relative;
    display: grid;
    grid-template-columns: repeat(11, 40px);
    grid-template-rows: repeat(11, 40px);
    touch-action: none;
    user-select: none;
}

.coordinate {
    line-height: 40px;
}

.game-water {
    width: 400px;
    height: 400px;
    position: absolute;
    top: 40px;
    left: 40px;
    z-index: 1;
    display: grid;
    grid-template-columns: repeat(10, 40px);
    grid-template-rows: repeat(10, 40px);
    touch-action: none;
    user-select: none;
}

.cell {
    line-height: 40px;
    position: relative;
    box-shadow: 1px 0 0 0 darkgrey,
    0 1px 0 0 darkgrey,
    1px 1px 0 0 darkgrey,
    inset 1px 1px 0 0 darkgrey;
}

.ship-dock {
    margin-top: 20px;
    width: 50%;
    height: 20px;
    display: grid;
    justify-self: center;
    grid-template-columns: 3.5fr 2.3fr 1.6fr 1.6fr 1fr;
    grid-gap: 3px;
}

.ship-in-docking-area {
    background-color: lightgrey;
}

#footer {
    padding: 0 50px;
    display: flex;
    justify-content: space-between;
}

#aircraft-carrier, #battleship, #cruiser, #submarine, #destroyer {
    background-color: chocolate;
    position: absolute;
    top: 0;
    left: 0;
    z-index: 1;
}

